<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/edittext_enterNumberOne"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/edittext_firstNumber_hint"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/edittext_enterNumberTwo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_enterNumberOne"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/edittext_secondNumber_hint"
        android:inputType="numberDecimal"
        />

    <Button
        android:id="@+id/button_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edittext_enterNumberTwo"
        android:layout_marginTop="50dp"
        android:layout_alignStart="@id/edittext_enterNumberTwo"
        android:text="@string/addButtonText"
        />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button_add"
        android:layout_toEndOf="@+id/button_add"
        android:layout_marginStart="30dp"
        android:text="@string/subtractButtonText"
        />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button_subtract"
        android:layout_toEndOf="@+id/button_subtract"
        android:layout_marginStart="30dp"
        android:text="@string/multiplyButtonText"
        />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button_multiply"
        android:layout_toEndOf="@+id/button_multiply"
        android:layout_marginStart="25dp"
        android:text="@string/divideButtonText"
        />

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_resultText"
        android:layout_below="@+id/button_add"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="25sp" />

</RelativeLayout>